@@ -194,9 +194,14 @@ var CloudCommander, Util, DOM, $;
              * DOM tree
              */
             document.onclick = function(pEvent){
+                /* if clicked on menu item */
+                var lClassName = pEvent.target.parentElement.className ;
+                if(lClassName === 'context-menu-item')
+                    return;
+                
                 if(pEvent && pEvent.x && pEvent.y){
                     var lLayer = DOM.getById('context-menu-layer');
-                    if(lLayer){                                            
+                    if(lLayer){
                         var lStyle;
                         
                         if(lLayer)
