@@ -70,6 +70,9 @@ keyStop: function(e, opt) {
 
 * Added ability to read gdrive key from config.
 
+* Fixed bug with setting curent cursor when 
+clicked on menu item.
+
 
 2012.12.12, Version 0.1.8
 
